changed logo image, fixed bug where different coach names pushed delete rating button out of bounds.

--- a/public/styles/client_profiles.css
+++ b/public/styles/client_profiles.css
@@ -246,9 +246,9 @@ body {
 .deleteRatingBtn {
     height: 22px;
     width: 22px;
-    position: relative;
-    left: 4.55rem;
-    bottom: .08rem;
+    position: absolute;
+    top: -0.05rem;
+    right: 1.3rem;
     background-color: rgba(255, 0, 0, 0.671);
     border-radius: 8px;
     border: 1px solid rgba(255, 0, 0, 0.671);
